--- a/styles/aminations.scss
+++ b/styles/aminations.scss
@@ -1,14 +1,3 @@
-@keyframes slideInFromRight25 {
-  0% {
-    transform: translateX(25%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
 @keyframes slideInFromRight {
   0% {
     transform: translateX(50%);
@@ -17,26 +6,6 @@
   100% {
     transform: translateX(0);
     opacity: 1;
-  }
-}
-
-@keyframes slideInFromRight100 {
-  0% {
-    transform: translateX(50%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes spinner {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
   }
 }
 
@@ -63,14 +32,14 @@
   }
 }
 
-@keyframes HideBelow {
+@keyframes AppearFromAbove {
   0% {
-    opacity: 1;
-    transform: translateY(0);
+    opacity: 0;
+    transform: translateY(-100%);
   }
 
   100% {
-    opacity: 0;
-    transform: translateY(100%);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
